--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \\\"src/**/*.ts\\\" \\\"test/**/*.ts\\\"",
-    "start": "nest --max_old_space_size=4096 start",
+    "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -20,11 +20,10 @@
     "test:e2e": "jest --config test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "9.0.0",
-    "@nestjs/core": "9.0.0",
-    "@nestjs/platform-express": "9.0.0",
+    "@nestjs/common": "10.3.0",
+    "@nestjs/core": "10.3.0",
+    "@nestjs/platform-fastify": "10.3.0",
     "reflect-metadata": "0.1.13",
-    "rxjs": "7.2.0",
     "mongoose": "7.5.2",
     "@nestjs/mongoose": "10.0.1",
     "uuid": "9.0.1",
@@ -36,10 +35,10 @@
   "devDependencies": {
     "dotenv": "16.3.1",
     "@types/uuid": "9.0.7",
-    "@nestjs/cli": "9.0.0",
-    "@nestjs/schematics": "9.0.0",
-    "@nestjs/testing": "9.0.0",
-    "@types/express": "4.17.13",
+    "@nestjs/cli": "10.3.0",
+    "@nestjs/schematics": "10.1.0",
+    "@nestjs/devtools-integration": "0.1.5",
+    "@nestjs/testing": "10.3.0",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
     "@types/supertest": "2.0.11",
@@ -56,6 +55,6 @@
     "ts-loader": "9.2.3",
     "ts-node": "10.0.0",
     "tsconfig-paths": "4.2.0",
-    "typescript": "4.7.4"
+    "typescript": "5.3.3"
   }
 }
