--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "joi": "17.11.0",
     "@joi/date": "2.1.0",
     "moment-timezone": "0.5.44",
-    "moment": "2.30.1"
+    "moment": "2.30.1",
+    "dotenv": "16.3.1"
   },
   "devDependencies": {
-    "dotenv": "16.3.1",
     "@types/uuid": "9.0.7",
     "@nestjs/cli": "10.3.0",
     "@nestjs/schematics": "10.1.0",
