--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,3 +5,11 @@ steps:
   - name: 'node'
     entrypoint: 'npm'
     args: [ 'run', 'build' ]
+
+availableSecrets:
+  secretManager:
+  - versionName: projects/324631814927/secrets/MONGO_CONNECTION_URL/versions/latest
+    env: 'MONGO_CONNECTION_URL'
+
+options:
+  logging: CLOUD_LOGGING_ONLY
