--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,1 @@
-MONGO_CONNECTION_URL=mongodb+srv://Alex:4nVzPoweQchDpeCC@cluster0.wjagxqn.mongodb.net/?retryWrites=true&w=majority
+MONGO_CONNECTION_URL=url
