--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "uuid": "9.0.1",
     "joi": "17.11.0",
     "@joi/date": "2.1.0",
-    "moment-timezone": "0.5.44",
     "moment": "2.30.1",
-    "dotenv": "16.3.1"
+    "dotenv": "16.3.1",
+    "class-transformer": "0.5.1",
+    "lodash.camelcase": "4.3.0"
   },
   "devDependencies": {
     "@types/uuid": "9.0.7",
@@ -43,8 +44,9 @@
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
     "@types/supertest": "2.0.11",
-    "@typescript-eslint/eslint-plugin": "5.0.0",
-    "@typescript-eslint/parser": "5.0.0",
+    "@types/lodash.camelcase": "4.3.9",
+    "@typescript-eslint/eslint-plugin": "6.18.1",
+    "@typescript-eslint/parser": "6.18.1",
     "eslint": "8.0.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
