--- a/package.json
+++ b/package.json
@@ -22,29 +22,32 @@
     "test:e2e": "jest --config test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/static": "6.12.0",
+    "@joi/date": "2.1.0",
     "@nestjs/common": "10.3.0",
     "@nestjs/core": "10.3.0",
-    "@nestjs/platform-fastify": "10.3.0",
-    "reflect-metadata": "0.1.13",
-    "mongoose": "7.5.2",
     "@nestjs/mongoose": "10.0.1",
-    "uuid": "9.0.1",
-    "joi": "17.11.0",
-    "@joi/date": "2.1.0",
-    "moment": "2.30.1",
-    "dotenv": "16.3.1",
+    "@nestjs/platform-fastify": "10.3.0",
+    "@nestjs/swagger": "7.2.0",
     "class-transformer": "0.5.1",
-    "lodash.camelcase": "4.3.0"
+    "class-validator": "0.14.1",
+    "dotenv": "16.3.1",
+    "lodash.camelcase": "4.3.0",
+    "moment": "2.30.1",
+    "moment-timezone": "0.5.44",
+    "mongoose": "7.5.2",
+    "reflect-metadata": "0.1.13",
+    "uuid": "9.0.1"
   },
   "devDependencies": {
-    "@types/uuid": "9.0.7",
     "@nestjs/cli": "10.3.0",
     "@nestjs/schematics": "10.1.0",
     "@nestjs/testing": "10.3.0",
     "@types/jest": "29.5.0",
+    "@types/lodash.camelcase": "4.3.9",
     "@types/node": "18.15.11",
     "@types/supertest": "2.0.11",
-    "@types/lodash.camelcase": "4.3.9",
+    "@types/uuid": "9.0.7",
     "@typescript-eslint/eslint-plugin": "6.18.1",
     "@typescript-eslint/parser": "6.18.1",
     "eslint": "8.0.1",
